WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20005
StyleRareNonInheritedData fails to initialize or compare m_maskBoxImage
https://bugs.webkit.org/show_bug.cgi?id=20005
Summary
StyleRareNonInheritedData fails to initialize or compare m_maskBoxImage
Simon Fraser (smfr)
Reported
2008-07-10 22:17:29 PDT
The copy ctor of StyleRareNonInheritedData fails to copy m_maskBoxImage, and the operator== fails to compare the m_maskBoxImage.
Attachments
Patch
(894 bytes, patch)
2008-07-10 22:18 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
Patch with changelog
(1.55 KB, patch)
2008-07-11 13:17 PDT
,
Simon Fraser (smfr)
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-07-10 22:18:20 PDT
Created
attachment 22244
[details]
Patch
Dave Hyatt
Comment 2
2008-07-11 12:04:50 PDT
Comment on
attachment 22244
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2008-07-11 13:17:57 PDT
Created
attachment 22250
[details]
Patch with changelog Bring hyatt's review forward.
Dean Jackson
Comment 4
2008-07-11 15:42:01 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/rendering/style/RenderStyle.cpp Committed
r35139
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug