2008-07-11  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        StyleRareNonInheritedData needs to initialize and compare
        m_maskBoxImage.
        <https://bugs.webkit.org/show_bug.cgi?id=20005>

        * rendering/style/RenderStyle.cpp:
        (WebCore::StyleRareNonInheritedData::StyleRareNonInheritedData):
        (WebCore::StyleRareNonInheritedData::operator==):


Canonical link: https://commits.webkit.org/27571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35139 268f45cc-cd09-0410-ab3c-d52691b4dbfc